--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -19,5 +19,8 @@
       }
     </ul>
     <a href="/items/new">Add a new item.</a>
+    <form action="/items/delete" method="post">
+      <button type="submit" name="button">Delete all items.</button>
+    </form>
   </body>
 </html>
